<resources>
    <string name="app_name">takeoutApp</string>
    <string name="title_pickUp">Pick Up</string>
    <string name="title_orderHistory">Order History</string>
    <string name="title_myAccount">My Account</string>
    <string name="logo">logo</string>
    <string name="u_n">Email As User Name</string>
    <string name="p_w">Password</string>
    <string name="s_i">Sign In</string>
    <string name="or">OR</string>
    <string name="s_i_fb">Sign In With Facebook</string>
    <string name="s_i_goo">Sign In With Google</string>
    <string name="d_reg">Don not have account? Register</string>
    <string name="register">register</string>
    <string name="email">Email As User Name</string>
    <string name="d_sign">Already have account? Sign In</string>
    <string name="asAdm">Admin</string>
    <string name="asCus">Customer</string>
    <string name="category">Category</string>
    <string name="drink">Drink</string>
    <string name="appetizer">Appetizer</string>
    <string name="mainCourse">Main course</string>
    <string name="desert">Desert</string>
    <string name="tv_id">ID</string>
    <string name="menu_name">Name</string>
    <string name="menu_price">Unit price($)</string>
    <string name="menu_calo">Calories(integers only)</string>
    <string name="menu_prep">Preparation Time(1&#8211;10mins)</string>
    <string name="tv_info">Information</string>
    <string name="tv_phot">Photo</string>
    <string name="menu_load_photo">Load Photo</string>
    <string name="menu_take_photo">Take Photo</string>
    <string name="pending_order">Pending Order</string>
    <string name="add_menu">Add Menu</string>
    <string name="remove_menu">Remove Menu</string>
    <string name="status_report">Status Report</string>
    <string name="popularity_report">Popularity Report</string>
    <string name="reset_order">Reset Order</string>
    <string name="log_out">Log Out</string>
    <string name="single_menu_name">Name: </string>
    <string name="single_menu_price">Price: $</string>
    <string name="single_menu_calo">Calories: </string>
    <string name="single_menu_prep">Preparation Time(min): </string>
    <string name="single_menu_status">Status: </string>
    <string name="single_menu_ordered_times">Ordered Times: </string>
    <string name="activate_single_menu">Activate</string>
    <string name="remove_single_menu">Remove</string>
    <string name="update_pending_order_order_id">OrderId</string>
    <string name="order_order_time">OrderTime: </string>
    <string name="order_start_time">StartTime: </string>
    <string name="order_ready_time">ReadyTime: </string>
    <string name="order_pickup_time">PickupTime: </string>
    <string name="update_pending_order_status">Status: </string>
    <string name="update_pending_order_update">Update</string>
    <string name="order_detail">Detail</string>
    <string name="report_start_date">Start Date: </string>
    <string name="report_end_date">End Date: </string>
    <string name="report_sort_by">Sort by: </string>
    <string name="report_category">Category: </string>
    <string name="report_search">Search</string>
    <string name="logout">Log Out</string>
    <string name="goodsDetail">Goods Detail</string>
    <string name="goodsDetailNumber">Total Number</string>
    <string name="itemName">Item Name</string>
    <string name="shopName">CMPE 277 Group 6</string>
    <string name="shoppingTotal">$0.00</string>
    <string name="placeOrder">Place Order</string>
    <string name="checkOrder">Check Order</string>
    <string name="s_o">Log Out</string>
    <string name="price">Price</string>
    <string name="coke">Coke</string>
    <string name="cokePrice">$2.0</string>
    <string name="menu">Menu</string>
    <string name="cancel">Cancel</string>
    <string name="sureLogout">Are your sure to log out?</string>
    <string name="productName">Product Name</string>
    <string name="mealPack">Meal Package</string>
    <string name="totalUnit">(Total Units: 12)</string>
    <string name="introduction">Introduction: Welcome to our take out app. Click the button below to view our foods and drinks</string>
    <string name="newOrder">New Order</string>
    <string-array name="sort_type">
        <item>Sort By Name</item>
        <item>Sort By Price</item>
        <item>Sort By Popularity</item>
    </string-array>
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->

    <string name="facebook_app_id">392880914542587</string>
    <string name="fb_login_protocol_scheme">fb392880914542587</string>


    <string-array name="category_arrays">
        <item>Appetizer</item>
        <item>Dessert</item>
        <item>Drink</item>
        <item>Main course</item>
    </string-array>
    <string-array name="status_arrays">
        <item>Queued</item>
        <item>Being-prepared</item>
        <item>Fulfilled</item>
        <item>Picked</item>
        <item>Abandoned</item>
    </string-array>
    <string-array name="status_report_arrays">
        <item>Order Time</item>
        <item>Start Time</item>
    </string-array>
</resources>
