<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="Deprecated">

    <Button
        android:id="@+id/admin_index_pending_order"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_x="110dp"
        android:layout_y="50dp"
        android:background="@color/admin1"
        android:text="@string/pending_order"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="57dp" />

    <Button
        android:id="@+id/admin_index_add_menu"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_x="110dp"
        android:layout_y="120dp"
        android:background="@color/admin2"
        android:text="@string/add_menu"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="57dp" />

    <Button
        android:id="@+id/admin_index_remove_menu"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_x="110dp"
        android:layout_y="190dp"
        android:background="@color/admin3"
        android:text="@string/remove_menu"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="57dp" />

    <Button
        android:id="@+id/admin_index_status_report"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_x="110dp"
        android:layout_y="260dp"
        android:background="@color/admin4"
        android:text="@string/status_report"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="57dp" />

    <Button
        android:id="@+id/admin_index_popularity_report"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_x="110dp"
        android:layout_y="330dp"
        android:background="@color/admin5"
        android:text="@string/popularity_report"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="57dp" />

    <Button
        android:id="@+id/admin_index_reset_order"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_x="110dp"
        android:layout_y="400dp"
        android:background="@color/admin6"
        android:text="@string/reset_order"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="57dp" />

    <Button
        android:id="@+id/admin_index_log_out"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_x="110dp"
        android:layout_y="470dp"
        android:background="@color/admin7"
        android:text="@string/log_out"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="57dp" />

</AbsoluteLayout>
