<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registerContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    tools:ignore="Deprecated">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="104dp"
        android:layout_x="152dp"
        android:layout_y="30dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="25dp" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_x="70dp"
        android:layout_y="228dp"
        android:ems="10"
        android:hint="@string/p_w"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="203dp" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_x="70dp"
        android:layout_y="165dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="203dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_x="72dp"
        android:layout_y="366dp"
        android:background="@drawable/btn_light_darkblue"
        android:textColor="@drawable/text_black_white"
        android:text="@string/register"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="266dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="332dp"
        android:layout_x="0dp"
        android:layout_y="454dp"
        android:background="@drawable/gradient_line"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/letter_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="194dp"
        android:layout_y="446dp"
        android:background="#FFFFFF"
        android:text="@string/or"
        android:textColor="#b3b3b3"
        tools:layout_editor_absoluteX="196dp"
        tools:layout_editor_absoluteY="320dp" />

    <Button
        android:id="@+id/btn_goToSignIn"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_x="72dp"
        android:layout_y="504dp"
        android:background="@drawable/btn_gray_blue"
        android:text="@string/d_sign"
        android:textColor="@drawable/text_black_white"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="523dp" />

    <RadioGroup
        android:id="@+id/radioGroup_register"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_x="71dp"
        android:layout_y="299dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtn_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/asAdm"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="313dp" />

        <RadioButton
            android:id="@+id/rbtn_cus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asCus"
            tools:layout_editor_absoluteX="208dp"
            tools:layout_editor_absoluteY="333dp" />
    </RadioGroup>

</AbsoluteLayout>