<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="Deprecated">

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="332dp"
        android:layout_x="0dp"
        android:layout_y="23dp"
        android:background="@drawable/gradient_line"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="170dp"
        android:layout_y="10dp"
        android:background="#FFFFFF"
        android:text="@string/category"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="47dp" />

    <Spinner
        android:id="@+id/add_menu_spinner_category"
        android:layout_width="307dp"
        android:layout_height="35dp"
        android:layout_x="54dp"
        android:layout_y="45dp"
        android:entries="@array/category_arrays"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="156dp" />

    <View
        android:id="@+id/view3"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="332dp"
        android:layout_x="2dp"
        android:layout_y="102dp"
        android:background="@drawable/gradient_line"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="157dp"
        android:layout_y="88dp"
        android:background="#FFFFFF"
        android:text="@string/tv_info"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="47dp" />

    <EditText
        android:id="@+id/add_menu_name"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_x="86dp"
        android:layout_y="128dp"
        android:ems="10"
        android:hint="@string/menu_name"
        android:inputType="text"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="274dp" />

    <EditText
        android:id="@+id/add_menu_price"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_x="86dp"
        android:layout_y="183dp"
        android:ems="10"
        android:hint="@string/menu_price"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="274dp" />

    <EditText
        android:id="@+id/add_menu_calo"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_x="86dp"
        android:layout_y="238dp"
        android:ems="10"
        android:hint="@string/menu_calo"
        android:inputType="number"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="274dp" />

    <EditText
        android:id="@+id/add_menu_prep"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_x="86dp"
        android:layout_y="293dp"
        android:ems="10"
        android:hint="@string/menu_prep"
        android:inputType="number"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="274dp" />

    <View
        android:id="@+id/view4"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="332dp"
        android:layout_x="0dp"
        android:layout_y="358dp"
        android:background="@drawable/gradient_line"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_info3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="176dp"
        android:layout_y="344dp"
        android:background="#FFFFFF"
        android:text="@string/tv_phot"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="47dp" />

    <ImageView
        android:id="@+id/add_menu_photo"
        android:layout_width="114dp"
        android:layout_height="133dp"
        android:layout_x="88dp"
        android:layout_y="384dp"
        android:background="@drawable/border"
        tools:layout_editor_absoluteX="171dp"
        tools:layout_editor_absoluteY="418dp" />

    <Button
        android:id="@+id/add_menu_btn_load_photo"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_x="212dp"
        android:layout_y="384dp"
        android:background="@color/photo1"
        android:text="@string/menu_load_photo"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="505dp" />

    <Button
        android:id="@+id/add_menu_btn_take_photo"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_x="212dp"
        android:layout_y="469dp"
        android:background="@color/photo2"
        android:text="@string/menu_take_photo"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="505dp" />

    <Button
        android:id="@+id/add_menu_btn_add_menu"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_x="87dp"
        android:layout_y="537dp"
        android:background="@color/colorPrimary"
        android:text="@string/add_menu"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="531dp" />

</AbsoluteLayout>