<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    tools:ignore="Deprecated">

    <ImageView
        android:id="@+id/popularity_report_pic"
        android:layout_width="97dp"
        android:layout_height="130dp"
        android:layout_x="0dp"
        android:layout_y="0dp"
        android:contentDescription="@string/tv_phot"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="1dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="106dp"
        android:layout_y="0dp"
        android:text="@string/single_menu_name"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="14dp" />

    <TextView
        android:id="@+id/popularity_report_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="154dp"
        android:layout_y="0dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="106dp"
        android:layout_y="21dp"
        android:text="@string/single_menu_price"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="14dp" />

    <TextView
        android:id="@+id/popularity_report_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="159dp"
        android:layout_y="21dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="106dp"
        android:layout_y="42dp"
        android:text="@string/single_menu_calo"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="14dp" />

    <TextView
        android:id="@+id/popularity_report_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="169dp"
        android:layout_y="42dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="106dp"
        android:layout_y="63dp"
        android:text="@string/single_menu_prep"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="14dp" />

    <TextView
        android:id="@+id/popularity_report_preparation_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="267dp"
        android:layout_y="63dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="106dp"
        android:layout_y="84dp"
        android:text="@string/single_menu_status"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="14dp" />

    <TextView
        android:id="@+id/popularity_report_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="157dp"
        android:layout_y="84dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="106dp"
        android:layout_y="105dp"
        android:text="@string/single_menu_ordered_times"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="14dp" />

    <TextView
        android:id="@+id/popularity_report_order_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="214dp"
        android:layout_y="105dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="33dp" />

</AbsoluteLayout>