<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="Deprecated">

    <!--<ImageView-->
        <!--android:id="@+id/logo"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="104dp"-->
        <!--android:layout_x="152dp"-->
        <!--android:layout_y="20dp"-->
        <!--android:contentDescription="@string/logo"-->
        <!--app:srcCompat="@drawable/logo"-->
        <!--tools:layout_editor_absoluteX="155dp"-->
        <!--tools:layout_editor_absoluteY="25dp" />-->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="104dp"
        android:layout_x="152dp"
        android:layout_y="30dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="25dp" />

    <EditText
        android:id="@+id/signIn_userName"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_x="70dp"
        android:layout_y="134dp"
        android:ems="10"
        android:hint="@string/u_n"
        android:inputType="text"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="143dp" />

    <EditText
        android:id="@+id/signIn_password"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_x="70dp"
        android:layout_y="184dp"
        android:ems="10"
        android:hint="@string/p_w"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="203dp" />

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_x="70dp"
        android:layout_y="286dp"
        android:background="@color/lightBlue"
        android:text="@string/s_i"
        android:textColor="#ffffff"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="266dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="332dp"
        android:layout_x="1dp"
        android:layout_y="504dp"
        android:background="@drawable/gradient_line"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/letter_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="196dp"
        android:layout_y="495dp"
        android:background="#FFFFFF"
        android:text="@string/or"
        android:textColor="#b3b3b3"
        tools:layout_editor_absoluteX="196dp"
        tools:layout_editor_absoluteY="320dp" />

    <Button
        android:id="@+id/btn_fbSignIn"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_x="70dp"
        android:layout_y="379dp"
        android:background="@color/facebook"
        android:text="@string/s_i_fb"
        android:textColor="#ffffff"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="358dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_googleSignIn"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_x="70dp"
        android:layout_y="440dp" />

    <!--<Button-->
    <!--android:id="@+id/btn_googleSignIn"-->
    <!--android:layout_width="270dp"-->
    <!--android:layout_height="45dp"-->
    <!--android:layout_x="70dp"-->
    <!--android:layout_y="437dp"-->
    <!--android:background="@color/google"-->
    <!--android:text="@string/s_i_goo"-->
    <!--android:textColor="#000000"-->
    <!--tools:layout_editor_absoluteX="70dp"-->
    <!--tools:layout_editor_absoluteY="423dp" />-->

    <Button
        android:id="@+id/btn_goToRegister"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_x="70dp"
        android:layout_y="528dp"
        android:background="@color/lightGray"
        android:text="@string/d_reg"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="523dp" />

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="492dp"
        android:layout_x="2dp"
        android:layout_y="353dp"
        android:background="@drawable/gradient_line"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/letter_or2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="195dp"
        android:layout_y="344dp"
        android:background="#FFFFFF"
        android:text="@string/or"
        android:textColor="#b3b3b3"
        tools:layout_editor_absoluteX="196dp"
        tools:layout_editor_absoluteY="483dp" />

    <RadioGroup
        android:id="@+id/radioGroup_signIn"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_x="72dp"
        android:layout_y="239dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtn_admin"
            android:layout_weight="1"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:text="@string/asAdm"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="313dp" />

        <RadioButton
            android:id="@+id/rbtn_cus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asCus"
            tools:layout_editor_absoluteX="208dp"
            tools:layout_editor_absoluteY="333dp" />

    </RadioGroup>

    <!--<Button-->
        <!--android:id="@+id/btn_ru"-->
        <!--android:layout_width="50dp"-->
        <!--android:layout_height="45dp"-->
        <!--android:layout_x="70dp"-->
        <!--android:layout_y="0dp"-->
        <!--android:background="@color/lightBlue"-->
        <!--android:text="入"-->
        <!--android:textColor="#ffffff"-->
        <!--tools:layout_editor_absoluteX="70dp"-->
        <!--tools:layout_editor_absoluteY="266dp" />-->

    <!--<Button-->
        <!--android:id="@+id/btn_toAdmin"-->
        <!--android:layout_width="50dp"-->
        <!--android:layout_height="45dp"-->
        <!--android:layout_x="272dp"-->
        <!--android:layout_y="0dp"-->
        <!--android:background="@color/title_red"-->
        <!--android:text="toAdmin"-->
        <!--android:textColor="#ffffff"-->
        <!--tools:layout_editor_absoluteX="70dp"-->
        <!--tools:layout_editor_absoluteY="266dp" />-->

</AbsoluteLayout>